# letbe

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: dev.yml
entity/: Cargo.toml
entity/src/: authn.rs  club.rs  lib.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_enum.rs  m20230814_192414_create_authn_table.rs  m20230822_121559_create_user_table.rs  m20230822_144020_create_club_table.rs  m20230822_144020_create_enum_types.rs  m20230822_160919_create_club_table.rs  utils.rs
proto/club/v1/: club.proto
proto/user/v1/: user.proto
src/: config.rs  env_config.rs  main.rs
src/application/: mod.rs
src/application/domain/models/club/: mod.rs  (+1 more)
src/application/managers/: mod.rs
src/application/managers/authn/: authn_manager.rs  mod.rs
src/application/managers/club/: club_manager.rs  mod.rs
src/application/managers/common/: manager.rs
src/application/managers/user/: user_manager.rs
src/application/repositories/: mod.rs
src/application/repositories/authn/: authn_repository.rs  mod.rs
src/application/repositories/club/: club_repository.rs  mod.rs
src/application/repositories/common/: repository.rs
src/application/repositories/user/: user_repository.rs
src/entities/user/: user.rs
src/infra/: db_initializor.rs  mod.rs
src/services/: mod.rs
src/services/club/: club_grpc_server.rs  club_service.rs  mod.rs
src/services/club/creation/: request.rs  response.rs
src/services/common/: base.rs  grpc_server.rs  mod.rs
src/services/common/request/: mod.rs  request_validator.rs
src/services/common/response/: response_status.rs
src/services/extensions/: mod.rs  user_context.rs  user_context_req.rs  utils.rs
src/services/middlewares/: auth_middleware.rs  mod.rs  utils.rs
src/services/user/: mod.rs  user_grpc_server.rs  user_request.rs  user_service.rs
src/services/user/login/: login_request.rs  response.rs
src/services/user/register/: register_request.rs  request.rs  response.rs
src/shared/utils/: datetime.rs  hasher.rs  jwt.rs  mod.rs
src/shared/utils/proto/: time.rs
(+4 files in other folders)
