[package]
name = "letbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
prost = "0.11.9"
validator = { version = "0.16.1", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.18.0"

[build-dependencies]
tonic-build = "0.9.2"
