[package]
name = "letbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
tokio = { version = "1.14.0", features = ["full"] }
tonic = "0.9.2"
tonic-reflection = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
validator = { version = "0.16.1", features = ["derive"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono", "macros"] }
once_cell = "1.18.0"
lazy_static = "1.4.0"
regex = "1.9.1"
argon2 = "0.5.1"
chrono = { version = "0.4.19", features = ["serde"] }

#Disable the default feature `use_pem`:
jsonwebtoken = {version = "8", default-features = false }
serde = {version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
